--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,8 @@
 {
+  "name": "@davious/frametext",
+  "version": "0.1.0",
+  "license": "MIT",
+  "exports": "./main.ts",
   "tasks": {
     "dev": "deno run --watch main.ts"
   },
